﻿GNomEx Release Notes

5.2.9 (Sep 20, 2011)
----------------------
* Added session timeout warning dialog
* Fixed billing account dropdown bug on Submit Request window.  When another lab was selected, billing account dropdown did not refresh properly.
* Allow string parameters for CreateAnalysisMain (used in analysis pipeline)
* Set cookies on http Java apps to work with forms based authentication
* Added ability to associate multiple genome builds with an analysis
* Reformatted New Analysis window and added links to "Add/Edit..." organisms and genome builds
* Added privacyExpirationDate to Analysis and Request tables. Field is edited via visibility tab.
* Added dictionary properties dataset_privacy_expiration and dataset_privacy_expiration_warning to govern use of privacyExpiration date field.
* Added request owner first name and last name to Lucene search index
* Fix billing plug-ins to ignore inactive prices


5.2.8.1 (Sep 7, 2011)
----------------------
* Remove hardcoded reference to mysql jar in batch scripts
* Added new usage pie charts for experiments by type, analysis by type, seq applications 


5.2.8  (Sep 6, 2011)
----------------------
* Treat login with 'guest' user account as a guest login, just like URL with parameter isGuest=Y
* Fixed logic for Experiment downloads and Experiment progress to work with now 'All experiments' filter.
* Fixed logic for Experiment downloads and Experiment progress to work for users not assigned to a lab.
* Show disk usage by lab, year, and category on Usage charts.

* Added hint to Experiment/Analysis Visibility tabs to tell how to activate Institution dropdown.
* Changed billing request lookup to find requests without needing to use "R" in the request number.
* Set lookup button as default when enter pressed in billing request lookup.
* Fixed bug where new price category causes corrupted tree.
* Use analysis_read_directory property (not analysis_write_directory) to read analysis files on file system in GetAnalysis