@@ -165,15 +165,21 @@
 		   <mx:HBox paddingLeft="20" horizontalGap="0" width="100%">
 		   	<mx:VBox verticalGap="0" width="100%">
 		   		<mx:RadioButtonGroup id="visibilityRadioGroup"/>
-		   		<mx:RadioButton value="OWNER" label="Owner       (the submitter and the lab PI)" groupName="visibilityRadioGroup"  click="checkVisibilitySetupCompleteness();parentDocument.dirty.setDirty()"/>
-		   		<mx:RadioButton value="MEM" selected="true" label="Members   (all members of the lab group)" groupName="visibilityRadioGroup"  click="checkVisibilitySetupCompleteness();parentDocument.dirty.setDirty()"/>
+				<mx:HBox horizontalGap="0" width="533">
+					<mx:VBox verticalGap="0" width="324">
+						<mx:RadioButton value="OWNER" label="Owner       (the submitter and the lab PI)" groupName="visibilityRadioGroup"  click="checkVisibilitySetupCompleteness();parentDocument.dirty.setDirty()"/>
+						<mx:RadioButton value="MEM" selected="true" label="Members   (all members of the lab group)" groupName="visibilityRadioGroup"  click="checkVisibilitySetupCompleteness();parentDocument.dirty.setDirty()"/>
+					</mx:VBox>
+					<mx:VBox verticalGap="0" height="100%" width="209" verticalAlign="bottom">
+						<mx:Text width="207" id="institutionNote" styleName="submitNote" height="33" paddingLeft="4" visible="{this.radioInstitutionVisibility.enabled ? false : true}">									
+							<mx:text>Institution visibility can only be set when lab belongs to an institution. Please contact GNomEx administrator.</mx:text>
+						</mx:Text>
+					</mx:VBox>
+				</mx:HBox>				
 				<mx:HBox horizontalGap="0" verticalAlign="middle">
 					<mx:RadioButton value="INST" selected="true" label="Institution (all lab groups that are part of institution)" groupName="visibilityRadioGroup"  click="checkVisibilitySetupCompleteness();parentDocument.dirty.setDirty()" id="radioInstitutionVisibility" enabled="false"/>
 					<mx:ComboBox width="210" dataProvider="{this.possibleInstitutions}" id="institutionCombo" labelField="@display"  editable="false" change="checkVisibilitySetupCompleteness()">			       	
 					</mx:ComboBox>	
-					<mx:Text width="632" id="institutionNote" styleName="submitNote" height="18" paddingLeft="4" visible="{this.radioInstitutionVisibility.enabled ? false : true}">									
-						<mx:text><![CDATA[Institution visibility can only be set when lab belongs to an institution.  Please contact GNomEx administrator.]]></mx:text>
-					</mx:Text>
 				</mx:HBox>
 		   		<mx:RadioButton value="PUBLIC" label="Public        (anyone)" groupName="visibilityRadioGroup"  click="checkVisibilitySetupCompleteness();parentDocument.dirty.setDirty()"/>
 				<mx:VBox verticalGap="0" visible="{parentApplication.isPrivacyExpirationSupported}">
