@@ -1,5 +1,10 @@
 ﻿GNomEx Release Notes
 
+----------------------
+* Added additional property initializations to gnomex_db_populate.sql
+* Fixed bugs in sample sheet upload
+* Redesigned several experiement/analysis windows to eliminate scroll bars when viewsing at 1024x768.
+
 5.2.9 (Sep 20, 2011)
 ----------------------
 * Added session timeout warning dialog
